# aether

./: HANDOFF_NEXT_AGENT.md  README.md  package.json
cli/src/: index.ts
crates/aether-core/: Cargo.toml
crates/aether-core/src/: engine.rs  http.rs  lib.rs  main.rs  metrics.rs  observability.rs  state.rs  types.rs
crates/aether-core/tests/: approval_audit.rs  variant_observations.rs
scripts/: evolution-loop.mjs  evolution-loop.test.mjs
sdk/ts/: package.json
sdk/ts/scripts/: socialFlow.resilience.test.mjs
sdk/ts/src/tools/: socialFlow.ts
